[gd_scene load_steps=5 format=3 uid="uid://bnb5lqiqmqfk0"]

[ext_resource type="Script" path="res://Scenes/Levels/level_1.gd" id="1_08c2c"]
[ext_resource type="Texture2D" uid="uid://b3jyjeujtxdm" path="res://Textures/Levels/level1.png" id="2_or3a1"]
[ext_resource type="Texture2D" uid="uid://bvjyc0tgn8xmf" path="res://Textures/Levels/tower_place.png" id="3_0jl31"]

[sub_resource type="Curve2D" id="Curve2D_m78wp"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -34, 225, -74.0825, 2.80616, 74.0825, -2.80616, 132, 199, -40.7126, -28.0316, 40.7126, 28.0316, 264, 229, -34.745, -31.1815, 34.745, 31.1815, 389, 366, -36.5268, -3.56359, 36.5268, 3.56359, 469, 411, -36.0814, 10.6908, 36.0814, -10.6908, 592, 406, -22.2725, 32.0724, 22.2725, -32.0724, 709, 344, -28.9542, 12.0271, 28.9542, -12.0271, 798, 277, -37.8632, -0.445449, 37.8632, 0.445449, 882, 257, -24.0543, -12.918, 24.0543, 12.918, 977, 274, -21.3816, -17.3725, 21.3816, 17.3725, 1039, 308, -20.9361, -26.2815, 20.9361, 26.2815, 1114, 425, -14.2544, -8.46354, 14.2544, 8.46354, 1172, 474, -28.9542, -3.11815, 28.9542, 3.11815, 1235, 500, 0, 0, 0, 0, 1316, 502)
}
point_count = 15

[node name="Level1" type="Node2D"]
script = ExtResource("1_08c2c")

[node name="Background" type="TextureRect" parent="."]
z_index = -1
offset_right = 1280.0
offset_bottom = 720.0
mouse_filter = 2
texture = ExtResource("2_or3a1")
expand_mode = 1

[node name="Path" type="Path2D" parent="."]
curve = SubResource("Curve2D_m78wp")

[node name="Towers" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TowerPlace1" type="TextureButton" parent="Towers"]
layout_mode = 0
offset_left = 422.0
offset_top = 275.0
offset_right = 502.0
offset_bottom = 355.0
texture_normal = ExtResource("3_0jl31")
ignore_texture_size = true
stretch_mode = 0

[node name="TowerPlace2" type="TextureButton" parent="Towers"]
layout_mode = 0
offset_left = 556.0
offset_top = 275.0
offset_right = 636.0
offset_bottom = 355.0
texture_normal = ExtResource("3_0jl31")
ignore_texture_size = true
stretch_mode = 0

[node name="TowerPlace3" type="TextureButton" parent="Towers"]
layout_mode = 0
offset_left = 186.0
offset_top = 265.0
offset_right = 266.0
offset_bottom = 345.0
texture_normal = ExtResource("3_0jl31")
ignore_texture_size = true
stretch_mode = 0

[node name="TowerPlace4" type="TextureButton" parent="Towers"]
layout_mode = 0
offset_left = 839.0
offset_top = 303.0
offset_right = 919.0
offset_bottom = 383.0
texture_normal = ExtResource("3_0jl31")
ignore_texture_size = true
stretch_mode = 0

[node name="TowerPlace5" type="TextureButton" parent="Towers"]
layout_mode = 0
offset_left = 1159.0
offset_top = 339.0
offset_right = 1239.0
offset_bottom = 419.0
texture_normal = ExtResource("3_0jl31")
ignore_texture_size = true
stretch_mode = 0

[node name="TowerPlace6" type="TextureButton" parent="Towers"]
layout_mode = 0
offset_left = 672.0
offset_top = 415.0
offset_right = 752.0
offset_bottom = 495.0
texture_normal = ExtResource("3_0jl31")
ignore_texture_size = true
stretch_mode = 0

[connection signal="pressed" from="Towers/TowerPlace1" to="." method="_on_tower_place_1_pressed"]
[connection signal="pressed" from="Towers/TowerPlace2" to="." method="_on_tower_place_2_pressed"]
[connection signal="pressed" from="Towers/TowerPlace3" to="." method="_on_tower_place_3_pressed"]
[connection signal="pressed" from="Towers/TowerPlace4" to="." method="_on_tower_place_4_pressed"]
[connection signal="pressed" from="Towers/TowerPlace5" to="." method="_on_tower_place_5_pressed"]
[connection signal="pressed" from="Towers/TowerPlace6" to="." method="_on_tower_place_6_pressed"]
